// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile e huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.8}
    fill={true}
    style={
      Object {
        "marginBottom": 10,
        "marginTop": 5,
        "width": "100%",
      }
    }
    uri="http://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;

exports[`tile e medium 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "column-reverse",
      "padding": 10,
      "paddingBottom": 0,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.8}
    fill={true}
    style={
      Object {
        "marginBottom": 10,
        "marginTop": 5,
        "width": "100%",
      }
    }
    uri="http://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;

exports[`tile e small 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row-reverse",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 5,
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.8}
    fill={true}
    style={
      Object {
        "width": "50%",
      }
    }
    uri="http://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;

exports[`tile e wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.8}
    fill={true}
    style={
      Object {
        "marginBottom": 10,
        "marginTop": 5,
        "width": "100%",
      }
    }
    uri="http://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;

exports[`tile e without breakpoint should be like small 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row-reverse",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "paddingBottom": 5,
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 5,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "includeFontPadding": false,
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
            }
          }
        >
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.8}
    fill={true}
    style={
      Object {
        "width": "50%",
      }
    }
    uri="http://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
  />
</Link>
`;
